# webframework

./: .cursorrules  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  RUNNING.md  STATIC_FILES.md  TEST_COVERAGE_ANALYSIS.md  biome.json  build-prod  fly.toml  justfile  launch-app.sh  manage-prod  nginx.conf  nginx.conf.bak.2021-05-09-032445  package.json  pyproject.toml  pyrightconfig.json  requirements.dev.txt  requirements.prod.txt  requirements.txt  secret_key.txt  test_exif_orientation.py  vitest.config.ts
.claude/skills/verify/: SKILL.md
.cursor/rules/: backend-website-app.mdc  backend.mdc  frontend-pages.mdc  frontend.mdc  project-structure.mdc
.github/workflows/: ci.yml  fly-deploy.yml
.zed/: settings.json
admin/: cleanup-after-fly-deploy.sh  start-dev-session.sh
admin/configs/: fly-postgres.toml  fly-sqlite.toml
admin/deploy/: cleanup-after-fly-deploy.sh  launch-fly.io-postgres.sh  launch-fly.io-sqlite.sh  set-fly-app-name.sh
admin/dev/: django-startapp.py  django-startapp.sh  start-tmux-session.sh
admin/justfiles/: dev.just  django.just  fly.io.just
admin/misc/raycast-extensions/: README.md  capture-text.sh  test-capture-text.sh
admin/misc/text-samples/: dhammapada-verse-1.txt  how-to-find-purpose-robert-green.txt
admin/prod/: build-prod.sh
admin/setup/: setup-all.sh  setup-backend.sh  setup-frontend.sh  setup-mac.sh
app/: .env.development.local.sample  .env.production.sample  .eslintrc.json  .git-blame-ignore-revs  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
app.old/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app.old/src/: PWABadge.tsx  index.css
app.old/src/api/: createPost.ts  csrf.ts  getPosts.ts  transcribePost.ts
app.old/src/components/: Footer.tsx  Header.tsx  ImageAttribution.tsx  LoadingOrError.tsx  Logout.tsx  Post.tsx  PostForm.tsx  PostList.tsx  ThemeProvider.tsx  ThemeToggle.tsx
app.old/src/contexts/: ThemeContext.tsx  auth.tsx
app.old/src/pages/: FruitDetails.tsx  Login.tsx  PageNotFound.tsx
app.old/src/test/: setup.ts
app.old/src/utils/: date.ts  misc.ts  responsive.ts
app.old/tests/: tsconfig.json
app/.husky/: pre-commit
app/e2e/: auth.spec.ts  ground-rules.spec.ts  home.spec.ts  navigation.spec.ts
app/public/: manifest.webmanifest  posts.json  site.webmanifest  sw.js
app/src/: App.tsx  PWADemo.css  index.css  main.tsx  routes.ts  service-worker-registration.ts  store.ts  types.ts  vite-env.d.ts
app/src/__tests__/: setup.ts
app/src/api/: auth.ts  constants.ts  createPost.ts  csrf.ts  getFruits.ts  getPosts.ts
app/src/components/: App.tsx  AppErrorBoundary.tsx  BackIcon.tsx  EchoMark.tsx  Feed.tsx  Fruit.tsx  FruitDetails.tsx  FruitGallery.tsx  GroundRulesModal.tsx  Header.tsx  ImageAttribution.tsx  ImageModal.tsx  Index.tsx  LoadingOrError.tsx  Login.tsx  LoginModal.tsx  Logout.tsx  Navbar.tsx  PageNotFound.tsx  Post.tsx  PostForm.tsx  PostList.tsx  Profile.tsx  PullToRefresh.css  PullToRefresh.tsx  SignupModal.tsx  ThemeProvider.tsx  ThemeToggle.tsx
app/src/contexts/: ThemeContext.tsx  auth.tsx
app/src/hooks/: use-toast.ts  useAuth.tsx  useComments.ts  useFeedKeyboard.ts  usePostFilters.ts  usePostHandlers.ts  usePosts.ts  useTags.ts
app/src/lib/: constants.ts  monitoring.ts  viewTracking.ts
app/src/pages/: DebugPage.tsx  FruitDetails.tsx  FruitGallery.tsx  Index.tsx  Login.tsx  NotFound.tsx  PWADemo.tsx  PageNotFound.tsx  ProfilePage.tsx
app/src/test/: setup.ts
app/src/types/: post.ts  tag.ts
app/src/utils/: date.ts  filterQuery.ts  postGroups.ts  (+2 more)
app/tests/: .eslintrc.json
dev/: dev-server.nginx.conf
docs/: deploy-fly.md  design-system.md  feature-backlog.md
docs/plans/: 2026-07-09-auto-transcribe.md  2026-07-09-link-preview-refresh-and-toggle.md  2026-07-09-link-previews.md  2026-07-09-media-polish.md  2026-07-09-privacy-and-drafts.md  2026-07-09-profile-upgrades.md  2026-07-09-search-power-tools.md  2026-07-09-view-counts.md  2026-07-10-link-preview-sources.md  2026-07-10-share-page-link-previews.md
docs/reports/: 2026-07-audits.md  2026-07-incidents-lessons.md  2026-07-phase0-security.md  2026-07-phase1-correctness.md  2026-07-phase2-social.md  2026-07-phase3-polish.md  2026-07-project-overview.md  2026-07-review-round.md
justfiles/: django.just
reports/code-smells/: 01-security.md  02-backend.md  03-frontend.md  04-tests-and-cross-cutting.md  README.md
scripts/: build-prod.sh  deploy-fly.io-postgres.sh  deploy-fly.io-sqlite.sh  django-startapp.py  manage-static-files.py  set-fly-app-name.sh  setup.ps1  setup.sh
scripts/configs/: fly-postgres.toml  fly-sqlite.toml
scripts/setup/: setup-backend.ps1  setup-backend.sh  setup-frontend.ps1  setup-frontend.sh
server/: .env.development.sample  .env.example  .env.production.sample  start-prod.sh
server/apps/: ratelimit.py
server/config/: asgi.py  drf_django61_compat.py  gunicorn.systemd.service  middleware.py  nginx.conf  s3-cors.json  settings.py  settings_production.py  urls.py  wsgi.py
sys/: create-error-log
(+206 files in other folders)
