[project]
name = "web-framework"
version = "0.0.6"

description = "Web framework"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "boto3==1.37.11",
    "dj-database-url==2.3.0",
    "django-cors-headers==4.6.0",
    "django-csp==4.0",
    "django-environ==0.12.0",
    "django-extensions==3.2.3",
    "django-storages==1.14.5",
    "django==5.2.5",
    "djangorestframework==3.15.2",
    "gunicorn==23.0.0",
    "openai==1.68.2",
    "pillow==11.2.1",
    "psycopg-binary==3.2.4",
    "psycopg-pool==3.2.4",
    "psycopg==3.2.4",
    "werkzeug==3.1.3",
    "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "django-stubs==5.2.0",
    "ipython==8.32.0",
    "isort==6.0.0",
    "neovim==0.3.1",
]

[tool.ruff]
# https://docs.astral.sh/ruff/settings/

# Target Python version
target-version = "py313" # change to match your Django project's Python version

# Exclude migrations from strict linting
exclude = [
  "**/migrations/**",
]

# Max line length (optional)
line-length = 99

# Enable autofix on save
fix = true

# Optional: Restrict to specific paths (e.g., Django apps)
# extend-include = ["*.py"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
# Include common linting rules and Django-specific rules
select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort (import sorting)
  "DJ", # Django-specific rules
  "D", # pydocstyle (docstring checks)
  "B", # flake8-bugbear
  "N", # pep8-naming
  "UP", # pyupgrade
]

# Docstring convention
[tool.ruff.lint.pydocstyle]
convention = "google" # or "numpy", "pep257"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# ^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
/(^/foo.py|migrations)/
'''
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# reportOptionalMemberAccess = false
exclude = [
  "**/node_modules",
  "**/__pycache__",
  ".git",
  "app",
]
include = ["scripts", "server"]

[tool.django-stubs]
# django_settings_module = "config.settings"
