[project]
name = "web-framework"
version = "0.0.6"

description = "Web framework"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "boto3==1.43.49",
    "dj-database-url==3.1.2",
    "django-cors-headers==4.9.0",
    "django-csp==4.0",
    "django-extensions==4.1",
    "django-storages==1.14.6",
    "django-tasks-db==0.12.0",
    "django-tasks==0.12.0",
    # Django 6.1 has no PyPI release carrying the 2026-07-07 security fixes (6.1b1
    # predates them). Pin the stable/6.1.x branch tip, which includes CVE-2026-48588,
    # CVE-2026-53877, and CVE-2026-53878. Repin to 6.1b2/rc1 once Django publishes it.
    "django @ git+https://github.com/django/django.git@b2ac13f2dcf253d7807bfb61b3e67e9a9d2df355",
    "djangorestframework-stubs[compatible-mypy]>=3.17.0",
    "djangorestframework==3.17.1",
    "environs[django]>=15.0.1",
    "gunicorn==26.0.0",
    "httpx>=0.28.1",
    "openai==2.45.0",
    "pillow==12.3.0",
    "psycopg-binary==3.3.4",
    "psycopg-pool==3.3.1",
    "psycopg==3.3.4",
    "sentry-sdk==2.65.0",
    "werkzeug==3.1.8",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "django-stubs==6.0.7",
    "ipython==9.15.0",
    "isort==8.0.1",
    "neovim==0.3.1",
]

[tool.ruff]
# https://docs.astral.sh/ruff/settings/

# Target Python version
target-version = "py313" # change to match your Django project's Python version

# Exclude migrations from strict linting
exclude = [
  "**/migrations/**",
]

# Max line length (optional)
line-length = 99

# Enable autofix on save
fix = true

# Optional: Restrict to specific paths (e.g., Django apps)
# extend-include = ["*.py"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
# Include common linting rules and Django-specific rules
select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort (import sorting)
  "DJ", # Django-specific rules
  "D", # pydocstyle (docstring checks)
  "B", # flake8-bugbear
  "N", # pep8-naming
  "UP", # pyupgrade
]

# Docstring convention
[tool.ruff.lint.pydocstyle]
convention = "google" # or "numpy", "pep257"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# ^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
/(^/foo.py|migrations)/
'''
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
exclude = [
  "**/node_modules",
  "**/__pycache__",
  ".git",
  "app",
]
include = ["admin", "server"]

[tool.django-stubs]
# django_settings_module = "config.settings"
